feat: setup CI/CD pipelines and semantic releases
- Add GitHub Actions workflows for automated releases
- Configure semantic-release for MCP package and VS Code extension
- Setup Vercel deployment for documentation website
- Add comprehensive secrets documentation
- Update package configurations for publishing
- Include automated testing and building in CI pipeline

--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@dev-atlas/mcp-knowledge-graph",
   "version": "0.1.0",
-  "private": true,
   "description": "MCP server for managing knowledge graph in SQLite",
   "type": "module",
   "main": "dist/index.js",
@@ -24,6 +23,13 @@
     "tsx": "^4.6.0",
     "typescript": "^5.2.2",
     "vitest": "^1.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
+    "semantic-release": "^22.0.12"
   }
 }
