feat: complete package namespacing and maintain Nextra 3.0.0
- Update VSCode extension package name to @dev-atlas/vscode-extension
- Update documentation references to use new namespaced package names
- Force install Nextra 3.0.0 to maintain compatibility with existing configuration
- Convert Next.js config to ES modules format (.mjs)
- All packages now use @dev-atlas namespace for npm publishing safety
- Build successful across all packages

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-atlas-extension",
+  "name": "@dev-atlas/vscode-extension",
   "displayName": "Dev Atlas",
   "description": "Dev Atlas - Knowledge Graph Extension for VS Code/Cursor",
   "version": "0.1.0",
