--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@dev-atlas/website",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "description": "Dev Atlas documentation and landing page",
   "scripts": {
@@ -11,9 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.2",
+    "@types/mdx": "^2.0.13",
     "next": "15.0.3",
-    "nextra": "^3.0.0",
-    "nextra-theme-docs": "^3.0.0",
+    "nextra": "^4.0.0",
+    "nextra-theme-docs": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
