feat: enhance website and VS Code extension with new components and features
- Add Radix UI components (Accordion, Avatar, Badge, Button, Card, Collapsible, HoverCard, Separator, Table, Tabs, Toggle) for improved UI consistency and functionality.
- Implement theme provider and toggle for dark/light mode support in the website.
- Update website layout and navigation for better user experience.
- Enhance README documentation with new features and usage instructions.
- Fix development server port in package.json and README for consistency.
- Introduce a knowledge graph visualizer in the VS Code extension for interactive exploration of relationships.
- Update MCP Knowledge Graph server package with additional metadata and configuration options.

Breaking Changes:
- Adjusted development server port from 3001 to 3000 for the website.

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -41,6 +41,13 @@
           "name": "Knowledge Graph",
           "when": "true"
         }
+      ],
+      "dev-atlas": [
+        {
+          "id": "dev-atlas-knowledge-graph",
+          "name": "Knowledge Graph",
+          "when": "true"
+        }
       ]
     },
     "viewsContainers": {
@@ -49,6 +56,15 @@
           "id": "dev-atlas",
           "title": "Dev Atlas",
           "icon": "$(graph)"
+        }
+      ]
+    },
+    "menus": {
+      "view/title": [
+        {
+          "command": "dev-atlas.openKnowledgeGraph",
+          "when": "view == dev-atlas-knowledge-graph",
+          "group": "navigation"
         }
       ]
     }
