--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -32,22 +32,24 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "drizzle-orm": "^0.28.6",
     "better-sqlite3": "^9.2.2",
+    "drizzle-orm": "^0.28.6",
+    "next": "15.5.2",
+    "vsce": "^2.15.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.8",
-    "tsx": "^4.6.0",
-    "typescript": "^5.2.2",
-    "vitest": "^1.0.0",
-    "uuid": "^9.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "semantic-release": "^22.0.12"
+    "@types/better-sqlite3": "^7.6.8",
+    "semantic-release": "^22.0.12",
+    "tsx": "^4.6.0",
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
+    "vitest": "^3.2.4"
   }
 }
