--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -78,20 +78,21 @@
     "package": "vsce package"
   },
   "devDependencies": {
-    "@types/vscode": "^1.74.0",
-    "@vscode/test-electron": "^2.3.0",
-    "typescript": "^5.2.2",
-    "vitest": "^1.0.0",
-    "vsce": "^2.15.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^11.1.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "semantic-release": "^22.0.12"
+    "@types/vscode": "^1.74.0",
+    "@vscode/test-electron": "^2.3.0",
+    "semantic-release": "^22.0.12",
+    "typescript": "^5.2.2",
+    "vitest": "^3.2.4",
+    "vsce": "^2.15.0"
   },
   "dependencies": {
+    "next": "15.5.2",
     "zod": "^3.22.4"
   }
 }
