--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,12 +13,14 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "zod": "^3.22.4",
-    "uuid": "^9.0.1"
+    "next": "15.5.2",
+    "uuid": "^9.0.1",
+    "vsce": "^2.15.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.7",
     "typescript": "^5.2.2",
-    "vitest": "^1.0.0"
+    "vitest": "^3.2.4"
   }
 }
