feat: improve database path resolution to use project root
- Add findProjectRoot function to locate project root directory
- Database now creates in project root instead of package location
- Prevents database from ending up in node_modules when installed
- Add comprehensive path resolution tests
- Bump version to 0.2.0

Resolves issue where database would be created in wrong location when
MCP is installed as a dependency.

--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@dev-atlas/mcp-knowledge-graph",
-  "version": "0.1.0",
+  "name": "dev-atlas-knowledge-graph",
+  "version": "0.2.0",
   "description": "MCP server for managing knowledge graph in SQLite",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "dev-atlas-knowledge-graph": "dist/index.js"
+  },
   "files": [
     "dist",
     "README.md"
