--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-atlas-knowledge-graph",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "MCP server for managing knowledge graph in SQLite",
   "type": "module",
   "main": "dist/index.js",
@@ -30,7 +30,7 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "lint": "biome check src/",
-    "test": "vitest",
+    "test": "vitest --run",
     "clean": "rm -rf dist"
   },
   "dependencies": {
