--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -94,6 +94,8 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/release-notes-generator": "^12.1.0",
+    "@types/better-sqlite3": "^7.6.8",
+    "@types/uuid": "^9.0.7",
     "@types/vscode": "^1.74.0",
     "@vscode/test-electron": "^2.3.0",
     "semantic-release": "^22.0.12",
@@ -102,7 +104,9 @@
     "vsce": "^2.15.0"
   },
   "dependencies": {
+    "better-sqlite3": "^9.2.2",
+    "drizzle-orm": "^0.29.2",
     "next": "15.5.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
-}
