feat: add initial implementation of Knowledge Graph database and VS Code extension features
- Introduce Knowledge Graph database using better-sqlite3 and drizzle-orm for data management.
- Implement commands for creating nodes and edges with logging for better debugging.
- Add icons and logo assets for the VS Code extension and website.
- Create .vscodeignore and LICENSE files for extension packaging and compliance.
- Enhance the extension's activation process with detailed logging and error handling.

This commit lays the foundation for the Knowledge Graph functionality and improves user experience through better visual assets and logging.

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -20,6 +20,7 @@
   "categories": [
     "Other"
   ],
+  "icon": "icons/icon-128x128.png",
   "activationEvents": [
     "onCommand:dev-atlas.openKnowledgeGraph",
     "onCommand:dev-atlas.createNode",
@@ -65,7 +66,7 @@
         {
           "id": "dev-atlas",
           "title": "Dev Atlas",
-          "icon": "$(graph)"
+          "icon": "icons/icon-32x32.png"
         }
       ]
     },
