--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,12 @@ coverage/
 *.db
 *.sqlite
 *.sqlite3
+*.db-wal
+*.db-shm
+*.sqlite-wal
+*.sqlite-shm
+*.sqlite3-wal
+*.sqlite3-shm
 
 # Turbo
 .turbo/
