chore: update configuration files and improve code formatting
- Modify biome.json to include ".next" in the ignored files list.
- Streamline package.json and turbo.json by consolidating array formatting.
- Refactor mcp-knowledge-graph package files for consistent import ordering and formatting.
- Enhance test files for improved readability and consistency in import statements.
- Update schema definitions in types/schema.ts to use `z.unknown()` for properties.

These changes enhance project organization and maintainability across various configuration and source files.

--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -8,17 +8,8 @@
   "bin": {
     "dev-atlas-knowledge-graph": "dist/index.js"
   },
-  "files": [
-    "dist",
-    "README.md"
-  ],
-  "keywords": [
-    "mcp",
-    "model-context-protocol",
-    "knowledge-graph",
-    "sqlite",
-    "ai-assistant"
-  ],
+  "files": ["dist", "README.md"],
+  "keywords": ["mcp", "model-context-protocol", "knowledge-graph", "sqlite", "ai-assistant"],
   "license": "MIT",
   "repository": {
     "type": "git",
