--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "Dev Atlas - Monorepo with MCP Knowledge Graph and VS Code Extension",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
