--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start --port 3000",
-    "lint": "next lint"
+    "lint": "biome check app/ components/ lib/"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
@@ -38,8 +38,6 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "15.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
