chore: add and update Vercel configuration for website deployment
- Introduce a new vercel.json file to define build and install commands for the website.
- Update existing vercel.json in the website directory to streamline build commands and output directory settings.

These changes enhance the deployment process for the website on Vercel.

--- a/apps/website/vercel.json
+++ b/apps/website/vercel.json
@@ -1,5 +1,5 @@
 {
-  "git": {
-    "deploymentEnabled": false
-  }
+  "buildCommand": "cd ../.. && npm run build --filter=@dev-atlas/website",
+  "outputDirectory": ".next",
+  "installCommand": "cd ../.. && npm install"
 }
