chore: update package names and configurations for website and shared packages
- Change package names from scoped to unscoped for `@dev-atlas/website` to `dev-atlas-website` and `@dev-atlas/shared` to `dev-atlas-shared`.
- Update Vercel configuration to reflect new package names in build commands.
- Add PostCSS configuration for Tailwind CSS support in the website.
- Modify README files to align with new package names and commands.

These changes streamline package management and enhance the deployment process for the website.

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dev-atlas/website",
+  "name": "dev-atlas-website",
   "version": "0.1.0",
   "private": true,
   "description": "Dev Atlas documentation and landing page",
@@ -38,6 +38,8 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
