--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dev-atlas/shared",
+  "name": "dev-atlas-shared",
   "version": "0.1.0",
   "private": true,
   "description": "Shared types and utilities for Dev Atlas",
