chore: update Vercel configuration for website build process
- Change build command to use `npx turbo` for improved performance.
- Add framework specification for Next.js in both vercel.json files.

These updates enhance the deployment process and ensure compatibility with Next.js.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-    "buildCommand": "npm run build --filter=dev-atlas-website",
+    "buildCommand": "npx turbo run build --filter=dev-atlas-website",
     "outputDirectory": "apps/website/.next",
     "installCommand": "npm install",
-    "ignoreCommand": "git diff HEAD^ HEAD --quiet . ':(exclude)apps/website'",
-    "public": false
+    "framework": "nextjs"
 }
