--- a/apps/website/vercel.json
+++ b/apps/website/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd ../.. && npm run build --filter=dev-atlas-website",
+  "buildCommand": "cd ../.. && npx turbo run build --filter=dev-atlas-website",
   "outputDirectory": ".next",
-  "installCommand": "cd ../.. && npm install"
+  "installCommand": "cd ../.. && npm install",
+  "framework": "nextjs"
 }
