--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -28,8 +28,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Setup Turbo Cache
+        uses: actions/cache@v3
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+
       - name: Build website
-        run: npm run build --workspace=@dev-atlas/website
+        run: npx turbo run build --filter=dev-atlas-website
 
       - name: Deploy to Vercel (Preview)
         if: github.event_name == 'pull_request'
@@ -39,7 +47,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          working-directory: ./apps/website
+          working-directory: .
 
       - name: Deploy to Vercel (Production)
         if: github.ref == 'refs/heads/main'
@@ -50,4 +58,4 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          working-directory: ./apps/website
+          working-directory: .
