chore: update release configurations for improved deployment
- Add NODE_AUTH_TOKEN to the GitHub Actions workflow for VS Code extension deployment.
- Refactor .releaserc.json files for both mcp-knowledge-graph and vscode-extension to enhance structure and consistency.
- Update asset paths in release configurations to use glob patterns for better matching.

These changes streamline the release process and improve deployment configurations across the project.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Package VS Code Extension
         run: |
@@ -94,4 +95,4 @@ jobs:
           vercel-args: '--prod'
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          working-directory: ./apps/website
+          working-directory: .
