--- a/apps/mcp-knowledge-graph/.releaserc.json
+++ b/apps/mcp-knowledge-graph/.releaserc.json
@@ -1,28 +1,18 @@
 {
-  "branches": ["main"],
+  "branches": [
+    "main"
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    [
-      "@semantic-release/npm",
-      {
-        "npmPublish": true,
-        "tarballDir": "dist"
-      }
-    ],
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
     [
       "@semantic-release/github",
       {
         "assets": [
           {
-            "path": "dist/*.tgz",
-            "label": "Distribution"
+            "path": "dist/**"
           }
         ]
       }
@@ -30,7 +20,10 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "CHANGELOG.md"],
+        "assets": [
+          "package.json",
+          "CHANGELOG.md"
+        ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
