--- a/apps/vscode-extension/.releaserc.json
+++ b/apps/vscode-extension/.releaserc.json
@@ -1,19 +1,15 @@
 {
-  "branches": ["main"],
+  "branches": [
+    "main"
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    [
       "@semantic-release/exec",
       {
-        "prepareCmd": "npm run package",
-        "publishCmd": "vsce publish --packagePath *.vsix"
+        "verifyConditionsCmd": "vsce verify-pat ${VSCE_PAT}",
+        "publishCmd": "vsce publish --pre-release --pat ${VSCE_PAT}"
       }
     ],
     [
@@ -21,17 +17,9 @@
       {
         "assets": [
           {
-            "path": "*.vsix",
-            "label": "VS Code Extension"
+            "path": "*.vsix"
           }
         ]
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["package.json", "CHANGELOG.md"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
