--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -37,6 +37,7 @@
     "@modelcontextprotocol/sdk": "^0.4.0",
     "better-sqlite3": "^9.2.2",
     "drizzle-orm": "^0.28.6",
+    "sqlite-vec": "^0.1.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
