--- a/apps/mcp-knowledge-graph/package.json
+++ b/apps/mcp-knowledge-graph/package.json
@@ -30,16 +30,20 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "lint": "biome check src/",
-    "test": "vitest --run",
+    "test": "NODE_ENV=test vitest --run",
+    "test:watch": "NODE_ENV=test vitest",
     "clean": "rm -rf dist"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
     "better-sqlite3": "^9.2.2",
     "drizzle-orm": "^0.28.6",
-    "sqlite-vec": "^0.1.0",
+    "ollama": "^0.5.9",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
+  },
+  "optionalDependencies": {
+    "openai": "^4.57.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
