feat: comprehensive linting fixes and type safety improvements
🚀 Version bump: 0.1.0 → 0.2.0 across all packages

🔧 Linting & Type Safety Improvements:
- Fixed 90+ linting errors across the entire codebase
- Replaced all 'any' types with proper type definitions
- Eliminated non-null assertions with proper null checks
- Added proper type casting for 'unknown' types
- Replaced forEach with for...of loops for better performance
- Fixed inferrable type annotations
- Organized imports alphabetically and used 'import type' for type-only imports
- Applied consistent formatting with Biome

🏗️ Build & Compilation:
- Fixed all TypeScript compilation errors
- Ensured all packages build successfully
- Improved type compatibility across modules
- Enhanced error handling and type safety

📦 Package Updates:
- dev-atlas: 0.1.0 → 0.2.0
- dev-atlas-knowledge-graph: 1.0.1 → 1.1.0
- dev-atlas-vscode-extension: 0.1.0 → 0.2.0
- dev-atlas-website: 0.1.0 → 0.2.0
- dev-atlas-shared: 0.1.0 → 0.2.0

✅ Quality Assurance:
- All packages now pass linting (0 errors)
- All packages build successfully
- 130/133 tests passing (3 minor test expectation issues)
- Enhanced code maintainability and developer experience

This release significantly improves code quality, type safety, and maintainability across the entire Dev Atlas monorepo.

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -2,7 +2,7 @@
   "name": "dev-atlas-vscode-extension",
   "displayName": "Dev Atlas",
   "description": "Dev Atlas - Knowledge Graph Extension for VS Code/Cursor",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "publisher": "abdulachik",
   "license": "MIT",
   "repository": {
@@ -17,9 +17,7 @@
   "engines": {
     "vscode": "^1.74.0"
   },
-  "categories": [
-    "Other"
-  ],
+  "categories": ["Other"],
   "icon": "icons/icon-128x128.png",
   "activationEvents": [
     "onCommand:dev-atlas.openKnowledgeGraph",
@@ -210,7 +208,7 @@
         "when": "editorTextFocus"
       },
       {
-        "command": "dev-atlas.searchKnowledgeGraph", 
+        "command": "dev-atlas.searchKnowledgeGraph",
         "key": "ctrl+shift+f ctrl+shift+s",
         "mac": "cmd+shift+f cmd+shift+s",
         "when": "editorTextFocus"
@@ -224,12 +222,7 @@
           "type": "string",
           "default": "@",
           "description": "Prefix character to add before file paths when copying to clipboard (e.g., '@' for Cursor, '#' for other editors, or empty for no prefix)",
-          "examples": [
-            "@",
-            "#",
-            "",
-            ">"
-          ]
+          "examples": ["@", "#", "", ">"]
         },
         "devAtlas.autoOpenFiles": {
           "type": "boolean",
@@ -238,12 +231,7 @@
         },
         "devAtlas.defaultFileAction": {
           "type": "string",
-          "enum": [
-            "ask",
-            "open",
-            "copy",
-            "both"
-          ],
+          "enum": ["ask", "open", "copy", "both"],
           "default": "ask",
           "description": "Default action when clicking file nodes: ask (prompt user), open (open in editor), copy (copy to clipboard), both (open and copy)"
         }
