chore: configure npm settings and optimize CI workflow
- Added a new .npmrc file to ensure consistent installs and improve performance by disabling package-lock.json and setting cache options.
- Updated install commands in vercel.json and apps/website/vercel.json to use npm install with --no-package-lock and --prefer-offline for faster dependency resolution.
- Enhanced GitHub Actions workflow by caching node_modules to speed up CI builds.

These changes streamline dependency management and improve build efficiency.

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "npx turbo run build --filter=dev-atlas-website",
   "outputDirectory": "apps/website/.next",
-  "installCommand": "npm install",
+  "installCommand": "npm install --no-package-lock --prefer-offline",
   "framework": "nextjs"
 }
