--- a/apps/website/vercel.json
+++ b/apps/website/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd ../.. && npx turbo run build --filter=dev-atlas-website",
   "outputDirectory": ".next",
-  "installCommand": "cd ../.. && npm install",
+  "installCommand": "cd ../.. && npm install --no-package-lock --prefer-offline",
   "framework": "nextjs"
 }
