chore: enhance CI workflow with caching and update npm install command
- Added caching for node_modules in the GitHub Actions workflow to improve build performance.
- Updated the npm install command to use --no-package-lock and --prefer-offline for faster dependency resolution.
- Removed the Vercel deployment step from the release workflow to streamline the process.

These changes optimize the CI/CD pipeline and enhance efficiency in dependency management.

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -25,8 +25,20 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            apps/*/node_modules
+            packages/*/node_modules
+          key: ${{ runner.os }}-node-22-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-22-
+            ${{ runner.os }}-node-
+
       - name: Install dependencies
-        run: npm ci
+        run: npm install --no-package-lock --prefer-offline
 
       - name: Setup Turbo Cache
         uses: actions/cache@v3
