chore: update CI workflows to enhance caching for npm dependencies
- Removed the cache option from the setup-node action to avoid redundancy.
- Added caching for the npm directory (~/.npm) in both deploy and release workflows to improve build performance.

These changes optimize the CI/CD pipeline by ensuring efficient caching of npm dependencies.

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -23,7 +23,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
 
       - name: Cache node_modules
         uses: actions/cache@v3
@@ -32,6 +31,7 @@ jobs:
             node_modules
             apps/*/node_modules
             packages/*/node_modules
+            ~/.npm
           key: ${{ runner.os }}-node-22-${{ hashFiles('**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node-22-
