--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,16 @@ jobs:
     strategy:
       matrix:
         node-version: [18, 20, 22]
+    services:
+      ollama:
+        image: ollama/ollama:latest
+        ports:
+          - 11434:11434
+        options: >-
+          --health-cmd "curl -f http://localhost:11434/api/tags || exit 1"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,11 +50,24 @@ jobs:
       - name: Install dependencies
         run: npm install --no-package-lock --prefer-offline
 
+      - name: Setup Ollama embedding model
+        run: |
+          # Wait for Ollama to be ready
+          timeout 60 bash -c 'until curl -f http://localhost:11434/api/tags; do sleep 2; done'
+          # Pull a lightweight embedding model for testing
+          curl -X POST http://localhost:11434/api/pull -d '{"name": "all-minilm:latest"}' -H "Content-Type: application/json"
+          # Wait for model to be ready
+          timeout 120 bash -c 'until curl -s http://localhost:11434/api/tags | grep -q "all-minilm"; do sleep 5; done'
+
       - name: Lint
         run: npm run lint
 
       - name: Test
         run: npm run test
+        env:
+          EMBEDDING_PROVIDER: ollama
+          EMBEDDING_MODEL: all-minilm
+          OLLAMA_URL: http://localhost:11434
 
       - name: Build
         run: npm run build
