--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,9 @@ jobs:
           - 11434:11434
         options: >-
           --health-cmd "curl -f http://localhost:11434/api/tags || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          --health-interval 15s
+          --health-timeout 10s
+          --health-retries 10
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -52,12 +52,12 @@ jobs:
 
       - name: Setup Ollama embedding model
         run: |
-          # Wait for Ollama to be ready
-          timeout 60 bash -c 'until curl -f http://localhost:11434/api/tags; do sleep 2; done'
+          # Wait for Ollama to be ready with more patience
+          timeout 120 bash -c 'until curl -f http://localhost:11434/api/tags; do sleep 3; done'
           # Pull a lightweight embedding model for testing
           curl -X POST http://localhost:11434/api/pull -d '{"name": "all-minilm:latest"}' -H "Content-Type: application/json"
-          # Wait for model to be ready
-          timeout 120 bash -c 'until curl -s http://localhost:11434/api/tags | grep -q "all-minilm"; do sleep 5; done'
+          # Wait for model to be ready with more patience
+          timeout 300 bash -c 'until curl -s http://localhost:11434/api/tags | grep -q "all-minilm"; do sleep 10; done'
 
       - name: Lint
         run: npm run lint
