fix: resolve Node.js module compatibility and MCP configuration issues
🔧 Native Module Fixes:
- Complete clean reinstall of better-sqlite3 in all workspaces
- Resolves NODE_MODULE_VERSION 127 vs 132 mismatch
- Ensures compatibility with Node.js v22.14.0

📦 Package.json Improvements:
- Simplified activationEvents to use onStartupFinished
- Removes deprecated individual command activation events
- Eliminates VS Code warnings for extensions targeting ^1.75

🗄️ MCP Server Configuration:
- Added KNOWLEDGE_GRAPH_DIR environment variable to MCP config
- Ensures MCP server uses correct project database path
- Fixes database connection issues in Cursor Chat

✅ Database Connectivity:
- VSCode extension can now connect to knowledge-graph.db
- MCP server uses project-specific database location
- Resolves 'Database not found' errors in extension logs

This should resolve all the connectivity issues and allow the file
explorer integration features to work properly.

--- a/apps/vscode-extension/package.json
+++ b/apps/vscode-extension/package.json
@@ -17,24 +17,12 @@
   "engines": {
     "vscode": "^1.74.0"
   },
-  "categories": ["Other"],
+  "categories": [
+    "Other"
+  ],
   "icon": "icons/icon-128x128.png",
   "activationEvents": [
-    "onCommand:dev-atlas.openKnowledgeGraph",
-    "onCommand:dev-atlas.createNode",
-    "onCommand:dev-atlas.createEdge",
-    "onCommand:dev-atlas.configureFilePrefix",
-    "onCommand:dev-atlas.searchKnowledgeGraph",
-    "onCommand:dev-atlas.advancedSearch",
-    "onCommand:dev-atlas.vectorSearch",
-    "onCommand:dev-atlas.filterTreeView",
-    "onCommand:dev-atlas.clearTreeFilters",
-    "onCommand:dev-atlas.addToKnowledgeGraph",
-    "onCommand:dev-atlas.createRelationship",
-    "onCommand:dev-atlas.showFileInfo",
-    "onCommand:dev-atlas.scanWorkspace",
-    "onCommand:dev-atlas.startFileWatching",
-    "onCommand:dev-atlas.stopFileWatching"
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -339,7 +327,12 @@
           "type": "string",
           "default": "@",
           "description": "Prefix character to add before file paths when copying to clipboard (e.g., '@' for Cursor, '#' for other editors, or empty for no prefix)",
-          "examples": ["@", "#", "", ">"]
+          "examples": [
+            "@",
+            "#",
+            "",
+            ">"
+          ]
         },
         "devAtlas.autoOpenFiles": {
           "type": "boolean",
@@ -348,7 +341,12 @@
         },
         "devAtlas.defaultFileAction": {
           "type": "string",
-          "enum": ["ask", "open", "copy", "both"],
+          "enum": [
+            "ask",
+            "open",
+            "copy",
+            "both"
+          ],
           "default": "ask",
           "description": "Default action when clicking file nodes: ask (prompt user), open (open in editor), copy (copy to clipboard), both (open and copy)"
         }
